--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -28,6 +28,27 @@
         </div>
       </div>
 
+      <div class="ui segment">
+        <div class="ui grid">
+          <div class="sixteen wide column">
+            <label>รายละเอียดแบบสอบทาน (ใหม่)</label>
+            <table id="datatable2" class="ui small celled table aligned hover">
+              <thead>
+                <tr>
+                  <th style="text-align: center !important ;width: 5%">
+                    <input type="checkbox" name="chk2" id="chk2" (click)="clickChkAll($event)">
+                  </th>
+                  <th style="text-align: center !important ;width: 95%">รายการ</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- DATA HERE -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
       <div class="ui attached segment">
         <div class="ui form">
 
