--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -190,12 +190,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="thirteen wide column" style="padding-top: 0">
+                    <div class="thirteen wide column">
                         <div class="ui active inverted dimmer" *ngIf="onLoading">
                             <div class="ui medium text loader">กำลังโหลด...</div>
                         </div>
-                        <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-                            <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 5000px;">
+                        <div>
+                        <!-- <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;"> -->
+                            <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 500%">
                                 <thead id="trDrinamic">
                                     <tr>
                                         <th rowspan="2" style="text-align: center !important">ลำดับ</th>
