--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -59,7 +59,7 @@
             </thead>
             <tbody>
               <tr *ngIf="datatable != undefined && datatable.length == 0">
-                <td colspan="5">ยังไม่มีข้อมูล</td>
+                <td class="center" colspan="5">ยังไม่มีข้อมูล</td>
               </tr>
               <tr *ngFor="let obj of datatable; let i = index" class="{{ obj.status === 'NEW' && 'positive' }}">
                 <td class="center">
