--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -18,7 +18,8 @@
                     
                 </div>
                 <br><br>
-                <input type="hidden" id="idEdit">
+                <input type="text" id="idEdit">
+                <input type="text" id="editFlag">
             <div class="ui grid">
                 <div class="three wide column ui right aligned"><label>คำนำหน้าชื่อ</label></div>
                 <div class="three wide column">
