--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
@@ -21,8 +21,8 @@
           <div class="ui form">
             <div class="field">
               <select class="ui search dropdown" id="department">
-                <option value="0">หน่วยงาน</option>
-                <!-- <option *ngFor="let data of deparmentList" value="{{data.value}}">{{data.label}}</option> -->
+                <option value="">หน่วยงาน</option>
+                <option *ngFor="let data of deparmentList" value="{{data.value}}">{{data.label}}</option> 
               </select>
             </div>
           </div>
