--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -102,7 +102,8 @@
                             <th>ใบกำกับภาษี</th>
                             <th>บัญชีประจำวัน</th>
                             <th>งบเดือน</th>
-                            <th>{{row[0].column6}}</th>
+                            <th></th>
+                            <!-- {{row[0].column6}} -->
                             <th>ค่าสูงสุดของข้อมูล</th>
                             <th>ผลต่างของคู่ข้อมูล</th>
                         </tr>
