--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -3,23 +3,20 @@
   </div>
   <div class="ui form center aligned" >
     <div class="ui attached  segment">
-        <form ngNativeValidate (submit)="onSubmit($event)">
+        <form ngNativeValidate (submit)="onSubmit($event)" id="mainForm">
                 <div class="ui container center aligned ">
                     <p><b>ปะมาณการค่าใช้จ่ายในการเดินทางไปราชการ</b></p>
-                    <p><b>หน่วยงาน กลุ่มตรวจสอบภายใน</b></p>
+                    <!-- <p><b>หน่วยงาน กลุ่มตรวจสอบภายใน</b></p>
                     <p><b>เดินทางไปราชการที่ สำนักงานสรรพสามิตพื้นที่เลย</b></p>
-                    <p><b>ตั้งแต่วันที่ 17 มิถุนายน 2561 - 30 มิถุนายน 2561</b></p>
-                    <p><b>{{hesderTxt.sector}}</b></p>
-                    <p><b>{{hesderTxt.area}}</b></p>
-                    <p><b>{{hesderTxt.branch}}</b></p>
-                    <p><b>{{hesderTxt.department}}</b></p>
-                    <p><b>{{hesderTxt.startDateInput}} - {{hesderTxt.endDateInput}}</b></p>
-                    
-                    
+                    <p><b>ตั้งแต่วันที่ 17 มิถุนายน 2561 - 30 มิถุนายน 2561</b></p> -->
+                    <p><b>หน่วยงาน {{hesderTxt.department}}</b></p>
+                    <p><b>เดินทางไปราชการที่ {{hesderTxt.areaDesc}}</b></p>                   
+                    <p><b>ตั้งแต่วันที่ {{hesderTxt.startDateDisplay}} - {{hesderTxt.endDateDisplay}}</b></p>                                        
                 </div>
                 <br><br>
-                <input type="text" id="idEdit">
-                <input type="text" id="editFlag">
+                <input type="hidden" id="headerId" value="{{hesderTxt.headerId}}">
+                <input type="hidden" id="idEdit">
+                <input type="hidden" id="editFlag">
             <div class="ui grid">
                 <div class="three wide column ui right aligned"><label>คำนำหน้าชื่อ</label></div>
                 <div class="three wide column">
@@ -169,7 +166,6 @@
             </div> 
             <div class="ui form center aligned grid">
                 <button class="ui  primary button" type="submit" >บันทึก</button>
-                <button class="ui  primary button" type="button" (click)="checkIndex()">index</button>
             </div>               
             <br> 
         </form>     
