--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -45,6 +45,9 @@
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
               กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
             </button>
+            <button class="ui mini primary button" (click)="cancelFlow()">
+              ยกเลิก
+            </button>
           </div>
 
         </div>
