--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
@@ -99,10 +99,10 @@
                       <tr style="text-align: center;">
                           <th>ลำดับ</th>
                           <th>รายการ</th>
-                          <th>ใบเบิกวัตถุดิบ</th>
-                          <th>บัญชีประจำวัน</th>
-                          <th>งบเดือน</th>
+                          <th></th>
+                          <th></th>
                           <th>{{row[0].column6}}</th>
+                          <th>คงเหลือจากการตรวจนับ</th>
                           <th>ค่าสูงสุดของข้อมูล</th>
                           <th>ผลต่างของคู่ข้อมูล</th>
                       </tr>
